# apk

./: build-android.sh  create_wrapper.sh  gradle.properties  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/app/: MainActivity.java
app/src/main/java/com/myimgui/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
